objects/geopointe__GP_Route_Plan_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Completed_Child_Relationship_Name__c</fullName>
        <label>Completed Child Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Completed_Filter_Logic__c</fullName>
        <description>Stores the AND/OR filter logic for queries, eg: 1 AND (2 OR 3)</description>
        <label>Completed Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Completed_Filters__c</fullName>
        <description>Holds configuration for filters for Data Sets.</description>
        <label>Completed Filters</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Completed_When_Field__c</fullName>
        <inlineHelpText>Name of lookup field to when the visit occurred</inlineHelpText>
        <label>Completed When Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Completed_Who_Field__c</fullName>
        <inlineHelpText>Name of lookup field to who visited the location</inlineHelpText>
        <label>Completed Who Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Create_Routes__c</fullName>
        <label>Create Geopointe Routes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>User Controlled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__End_Date__c</fullName>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__Freq_Num_Time_Units__c</fullName>
        <label>Target Frequency - # Time Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Freq_Num_Visits_Field__c</fullName>
        <inlineHelpText>Name of field to use to override Target Freq # Visits</inlineHelpText>
        <label>Target Frequency - # Visits Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Freq_Num_Visits__c</fullName>
        <label>Target Frequency - # Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Freq_Time_Unit__c</fullName>
        <label>Target Frequency - Time Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>day</fullName>
                </value>
                <value>
                    <fullName>week</fullName>
                    <default>true</default>
                    <label>week</label>
                </value>
                <value>
                    <fullName>month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Include_Poor_Quality_Geocodes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Poor Quality Geocodes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Location_Filter_Logic__c</fullName>
        <description>Stores the AND/OR filter logic for queries, eg: 1 AND (2 OR 3)</description>
        <label>Location Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Location_Filters__c</fullName>
        <description>Holds configuration for filters for Data Sets.</description>
        <label>Location Filters</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Object_User_Field__c</fullName>
        <label>Map Object User Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Object__c</fullName>
        <inlineHelpText>The API name of the map object this Route Plan uses.</inlineHelpText>
        <label>Map Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Number_of_Route_Plan_Users__c</fullName>
        <label>User Count</label>
        <summaryForeignKey>geopointe__GP_Route_Plan_User__c.geopointe__Route_Plan_Configuration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>geopointe__Scheduled_Additional_Fields__c</fullName>
        <inlineHelpText>Additional fields to set and their values</inlineHelpText>
        <label>Scheduled Additional Fields</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Scheduled_Child_Relationship_Name__c</fullName>
        <label>Scheduled Child Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Scheduled_End_Field__c</fullName>
        <inlineHelpText>Name of datetime field in which to save the visit end time</inlineHelpText>
        <label>Scheduled End Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Scheduled_Name__c</fullName>
        <inlineHelpText>What to name the scheduled visit records</inlineHelpText>
        <label>Scheduled Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Scheduled_Route_Plan_Field__c</fullName>
        <inlineHelpText>Name of Route Plan lookup field</inlineHelpText>
        <label>Scheduled Route Plan Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Scheduled_Start_Field__c</fullName>
        <inlineHelpText>Name of datetime field in which to save the visit start time</inlineHelpText>
        <label>Scheduled Start Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Scheduled_When_Field__c</fullName>
        <inlineHelpText>Name of date field in which to save the date of the visit</inlineHelpText>
        <label>Scheduled When Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Scheduled_Who_Field__c</fullName>
        <inlineHelpText>Name of User lookup field in which to save who is doing the visit</inlineHelpText>
        <label>Scheduled Who Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Date__c</fullName>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Visit_Buffer__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Visit Buffer (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Visit_Duration_Field__c</fullName>
        <inlineHelpText>Name of field to use to override Visit Duration</inlineHelpText>
        <label>Visit Duration Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Visit_Duration__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Visit Duration (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Visiting_Hours__c</fullName>
        <inlineHelpText>Defines the days and hours during which visits can be made. Use JSON and 24-hour format: {&quot;Mon&quot;:(&quot;08:00&quot;,&quot;17:30&quot;),&quot;Tue&quot;:(&quot;07:30&quot;,&quot;13:00&quot;)}</inlineHelpText>
        <label>Visiting Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geopointe Route Plan Configuration</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Start_Date__c</columns>
        <columns>geopointe__End_Date__c</columns>
        <columns>geopointe__Status__c</columns>
        <columns>geopointe__Map_Object__c</columns>
        <columns>geopointe__Number_of_Route_Plan_Users__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Route Plan Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>